syntax = "proto3";

package maccms;

message DoubanItem {
  string id = 1;
  string title = 2;
  string poster = 3;
  string rate = 4;
  string year = 5;
  string remarks = 6;
}

message DoubanResult {
  int32 code = 1;
  string message = 2;
  repeated DoubanItem list = 3;
}

message SearchResult {
  string id = 1;
  string title = 2;
  string poster = 3;
  repeated string episodes = 4;
  repeated string episodes_titles = 5;
  string source = 6;
  string source_name = 7;
  string class = 8;
  string year = 9;
  string desc = 10;
  string type_name = 11;
  int32 douban_id = 12;
}

message SearchResultList {
    repeated SearchResult results = 1;
}

message CmsHomePageApiResponse {
  DoubanResult movies = 1;
  DoubanResult tvShows = 2;
  DoubanResult varietyShows = 3;
  DoubanResult animes = 4;
  DoubanResult shortVideos = 5;
}
